(1) fix overlapped menu (2) open on mouse over on button too

--- a/res/style.less
+++ b/res/style.less
@@ -33,7 +33,7 @@
 		color: #0000FF !important; 
 	}
 	menuitem.unloaded .menu-iconic-text { 
-		color: #777; 
+		opacity: 0.5;
 	}
 	menuitem.fake .menu-iconic-text { 
 		color: #B60000; 
